rust/crates/rax/src/string/rules/snapshots/rax__string__rules__char__tests__ascii_no_match.snap
---
source: crates/rax/src/string/rules/char.rs
expression: result
---
Err(
    RuleError {
        reason: "input is empty or does not contain the expected character.",
    },
)
