rust/crates/rax/src/string/rules/snapshots/rax__string__rules__char__tests__empty_input.snap
---
source: crates/rax/src/string/rules/char.rs
expression: result
---
Err(
    "input is empty.",
)
