rust/crates/rax/src/string/rules/snapshots/rax__string__rules__char__tests__no_match.snap
---
source: crates/rax/src/string/rules/char.rs
expression: result
---
Err(
    "first character does not match.",
)
