rust/crates/rax/src/string/rules/snapshots/rax__string__rules__char__tests__utf8_match.snap
---
source: crates/rax/src/string/rules/char.rs
expression: result
---
Ok(
    (
        '你',
        "好",
    ),
)
